/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */

/**
 *
 * @author cucchiarini.cesare
 */
public class Giocatore {
    private int punti;
    
    public void aggiungiPunti(int punti){
        this.punti+=punti;
    }
}
